Add step-level decomposition, inline diff highlighting, and code cleanup
- Extract individual filter/transformer/responseTransformer steps as separate tree components (3-level nesting: connector > sub-group > step)
- Extract connector plugin properties (e.g., TLS Manager) as discrete tree components
- Add word-level (character-level) inline highlighting within changed lines
- Switch diff panel to git-style 2-color scheme (red for old, green for new)
- Replace default tree icons with colored circles matching change state
- Add change type labels on tree nodes with toggle checkbox
- Fix CI workflow (Java 8→17, artifact name)
- Add @CheckAuthorizedChannelId to history read endpoints
- Fix relative time display, harden XML parsers, replace System.err with SLF4J
- Clean up dead code, duplicate/wildcard imports, trivial passthrough class
- Bump version to 2.5.0
- Add 30+ comprehensive tests

Compatible with OIE 4.4.0+ and Mirth Connect 4.4.0+ (Java 17 required).