@@ -24,6 +24,7 @@ import java.awt.Font;
 import java.awt.FontMetrics;
 import java.awt.event.AdjustmentEvent;
 import java.awt.event.AdjustmentListener;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -50,8 +51,10 @@ public class SimpleDiffPanel extends JPanel {
 
     private static final Color COLOR_ADDED = new Color(200, 255, 200);      // Light green
     private static final Color COLOR_DELETED = new Color(255, 200, 200);    // Light red
-    private static final Color COLOR_CHANGED = new Color(200, 200, 255);    // Light blue
-    private static final Color COLOR_CHANGED_OLD = new Color(255, 255, 200); // Light yellow
+    private static final Color COLOR_CHANGED_OLD = COLOR_DELETED;           // Changed old side = light red
+    private static final Color COLOR_CHANGED_NEW = COLOR_ADDED;             // Changed new side = light green
+    private static final Color COLOR_HIGHLIGHT_OLD = new Color(255, 150, 150); // Darker red for changed words
+    private static final Color COLOR_HIGHLIGHT_NEW = new Color(130, 220, 130); // Darker green for changed words
     private static final Color COLOR_LINE_NUMBER_BG = new Color(240, 240, 240); // Light gray
 
     private JTextPane leftPane;
@@ -76,20 +79,30 @@ public class SimpleDiffPanel extends JPanel {
         leftLineNumbers = createLineNumberArea();
         rightLineNumbers = createLineNumberArea();
 
-        // Create scroll panes with line numbers as row headers
-        leftScrollPane = new JScrollPane(leftPane);
-        leftScrollPane.setRowHeaderView(leftLineNumbers);
+        // Create scroll panes with line numbers as row headers.
+        // Use fixed preferred/minimum sizes so content doesn't drive layout.
+        Dimension smallSize = new Dimension(0, 0);
 
-        rightScrollPane = new JScrollPane(rightPane);
+        leftScrollPane = new JScrollPane(leftPane,
+                JScrollPane.VERTICAL_SCROLLBAR_AS_NEEDED,
+                JScrollPane.HORIZONTAL_SCROLLBAR_AS_NEEDED);
+        leftScrollPane.setRowHeaderView(leftLineNumbers);
+        leftScrollPane.setMinimumSize(smallSize);
+        leftScrollPane.setPreferredSize(smallSize);
+
+        rightScrollPane = new JScrollPane(rightPane,
+                JScrollPane.VERTICAL_SCROLLBAR_AS_NEEDED,
+                JScrollPane.HORIZONTAL_SCROLLBAR_AS_NEEDED);
         rightScrollPane.setRowHeaderView(rightLineNumbers);
+        rightScrollPane.setMinimumSize(smallSize);
+        rightScrollPane.setPreferredSize(smallSize);
 
         // Synchronize scrolling
         setupScrollSync();
 
-        // Create split pane
+        // Create split pane — resizeWeight keeps it 50/50 on resize
         JSplitPane splitPane = new JSplitPane(JSplitPane.HORIZONTAL_SPLIT, leftScrollPane, rightScrollPane);
         splitPane.setResizeWeight(0.5);
-        splitPane.setDividerLocation(0.5);
 
         add(splitPane, BorderLayout.CENTER);
 
@@ -98,7 +111,16 @@ public class SimpleDiffPanel extends JPanel {
     }
 
     private JTextPane createTextPane() {
-        JTextPane pane = new JTextPane();
+        // Override to disable word wrap — lets long lines extend beyond the viewport
+        JTextPane pane = new JTextPane() {
+            @Override
+            public boolean getScrollableTracksViewportWidth() {
+                if (getParent() == null || getUI() == null) {
+                    return false;
+                }
+                return getUI().getPreferredSize(this).width <= getParent().getSize().width;
+            }
+        };
         pane.setEditable(false);
         pane.setFont(new Font("Monospaced", Font.PLAIN, 12));
         return pane;
@@ -162,8 +184,8 @@ public class SimpleDiffPanel extends JPanel {
     }
 
     private void displayDiff(String leftContent, String rightContent) {
-        List<String> leftLines = Arrays.asList(leftContent.split("\n", -1));
-        List<String> rightLines = Arrays.asList(rightContent.split("\n", -1));
+        List<String> leftLines = leftContent.isEmpty() ? List.of() : Arrays.asList(leftContent.split("\n", -1));
+        List<String> rightLines = rightContent.isEmpty() ? List.of() : Arrays.asList(rightContent.split("\n", -1));
 
         Patch<String> patch = DiffUtils.diff(leftLines, rightLines);
 
@@ -183,7 +205,10 @@ public class SimpleDiffPanel extends JPanel {
         StyleConstants.setBackground(changedOldStyle, COLOR_CHANGED_OLD);
 
         Style changedNewStyle = leftDoc.addStyle("changedNew", null);
-        StyleConstants.setBackground(changedNewStyle, COLOR_CHANGED);
+        StyleConstants.setBackground(changedNewStyle, COLOR_CHANGED_NEW);
+
+        Style highlightOldStyle = leftDoc.addStyle("highlightOld", null);
+        StyleConstants.setBackground(highlightOldStyle, COLOR_HIGHLIGHT_OLD);
 
         // Also add styles to right doc
         rightDoc.addStyle("normal", null);
@@ -194,7 +219,10 @@ public class SimpleDiffPanel extends JPanel {
         Style rightChangedOld = rightDoc.addStyle("changedOld", null);
         StyleConstants.setBackground(rightChangedOld, COLOR_CHANGED_OLD);
         Style rightChangedNew = rightDoc.addStyle("changedNew", null);
-        StyleConstants.setBackground(rightChangedNew, COLOR_CHANGED);
+        StyleConstants.setBackground(rightChangedNew, COLOR_CHANGED_NEW);
+
+        Style highlightNewStyle = rightDoc.addStyle("highlightNew", null);
+        StyleConstants.setBackground(highlightNewStyle, COLOR_HIGHLIGHT_NEW);
 
         try {
             // Track current position in each file
@@ -241,24 +269,33 @@ public class SimpleDiffPanel extends JPanel {
                         break;
 
                     case CHANGE:
-                        // Lines changed - show old on left, new on right
+                        // Lines changed - show old on left, new on right with word-level highlights
                         List<String> oldLines = delta.getSource().getLines();
                         List<String> newLines = delta.getTarget().getLines();
                         int maxLines = Math.max(oldLines.size(), newLines.size());
 
                         for (int i = 0; i < maxLines; i++) {
-                            if (i < oldLines.size()) {
+                            if (i < oldLines.size() && i < newLines.size()) {
+                                // Both sides have a line — do inline character-level diff
+                                String oldLine = oldLines.get(i);
+                                String newLine = newLines.get(i);
+                                Patch<String> charPatch = DiffUtils.diff(toCharList(oldLine), toCharList(newLine));
+
+                                boolean[] oldHighlights = computeInlineHighlights(oldLine.length(), charPatch, true);
+                                boolean[] newHighlights = computeInlineHighlights(newLine.length(), charPatch, false);
+
+                                appendLineWithHighlights(leftDoc, oldLine, changedOldStyle, highlightOldStyle, oldHighlights, leftLineNumBuilder, leftLine + 1);
+                                leftLine++;
+                                appendLineWithHighlights(rightDoc, newLine, changedNewStyle, highlightNewStyle, newHighlights, rightLineNumBuilder, rightLine + 1);
+                                rightLine++;
+                            } else if (i < oldLines.size()) {
                                 appendLine(leftDoc, oldLines.get(i), changedOldStyle, leftLineNumBuilder, leftLine + 1);
                                 leftLine++;
+                                appendLine(rightDoc, "", changedNewStyle, rightLineNumBuilder, -1);
                             } else {
                                 appendLine(leftDoc, "", changedOldStyle, leftLineNumBuilder, -1);
-                            }
-
-                            if (i < newLines.size()) {
                                 appendLine(rightDoc, newLines.get(i), changedNewStyle, rightLineNumBuilder, rightLine + 1);
                                 rightLine++;
-                            } else {
-                                appendLine(rightDoc, "", changedNewStyle, rightLineNumBuilder, -1);
                             }
                         }
                         break;
@@ -314,5 +351,60 @@ public class SimpleDiffPanel extends JPanel {
         } else {
             lineNumBuilder.append("     ");
         }
+    }
+
+    private void appendLineWithHighlights(StyledDocument doc, String line, Style baseStyle, Style highlightStyle,
+            boolean[] highlights, StringBuilder lineNumBuilder, int lineNum) throws BadLocationException {
+        int length = doc.getLength();
+        if (length > 0) {
+            doc.insertString(length, "\n", baseStyle);
+            lineNumBuilder.append("\n");
+        }
+
+        // Insert the line in runs, switching between base and highlight styles
+        int i = 0;
+        while (i < line.length()) {
+            boolean hl = (i < highlights.length) && highlights[i];
+            int runStart = i;
+            while (i < line.length()) {
+                boolean nextHl = (i < highlights.length) && highlights[i];
+                if (nextHl != hl) break;
+                i++;
+            }
+            doc.insertString(doc.getLength(), line.substring(runStart, i), hl ? highlightStyle : baseStyle);
+        }
+
+        if (lineNum > 0) {
+            lineNumBuilder.append(String.format("%4d ", lineNum));
+        } else {
+            lineNumBuilder.append("     ");
+        }
+    }
+
+    static List<String> toCharList(String s) {
+        List<String> chars = new ArrayList<>(s.length());
+        for (char c : s.toCharArray()) {
+            chars.add(String.valueOf(c));
+        }
+        return chars;
+    }
+
+    static boolean[] computeInlineHighlights(int lineLength, Patch<String> charPatch, boolean isSource) {
+        boolean[] highlights = new boolean[lineLength];
+        for (AbstractDelta<String> delta : charPatch.getDeltas()) {
+            int pos;
+            int size;
+            if (isSource) {
+                pos = delta.getSource().getPosition();
+                size = delta.getSource().size();
+            } else {
+                pos = delta.getTarget().getPosition();
+                size = delta.getTarget().size();
+            }
+            for (int i = pos; i < pos + size && i < lineLength; i++) {
+                highlights[i] = true;
+            }
+        }
+        return highlights;
     }
 }
